--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "EBTCalc",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Programmable RPN Calculator",
   "main": "src/main.js",
   "scripts": {
@@ -27,10 +27,10 @@
   "license": "GPL-3.0-only",
   "devDependencies": {
     "chai": "^4.2.0",
-    "electron": "^11.0.2",
-    "electron-packager": "^15.1.0",
+    "electron": "^11.2.1",
+    "electron-packager": "^15.2.0",
     "mocha": "^8.2.1",
-    "sinon": "^9.2.1",
+    "sinon": "^9.2.4",
     "spectron": "^13.0.0"
   },
   "dependencies": {
@@ -38,11 +38,14 @@
     "chart.js": "^2.9.4",
     "esprima": "^4.0.1",
     "nyc": "^15.1.0",
-    "prettier": "^2.2.0",
+    "prettier": "^2.2.1",
     "pretty-data": "^0.40.0",
     "serialize-javascript": "^5.0.1"
   },
   "mocha": {
-    "spec": ["./test/unit", "./test/integration"]
+    "spec": [
+      "./test/unit",
+      "./test/integration"
+    ]
   }
 }
