--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "EBTCalc",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Programmable RPN Calculator",
   "main": "src/main.js",
   "scripts": {
@@ -26,21 +26,22 @@
   "author": "eric@terrell.info",
   "license": "GPL-3.0-only",
   "devDependencies": {
-    "chai": "^4.2.0",
-    "electron": "^11.2.1",
-    "electron-packager": "^15.2.0",
-    "mocha": "^8.2.1",
-    "sinon": "^9.2.4",
+    "chai": "^4.3.4",
+    "electron": "^11.5.0",
+    "electron-packager": "^15.4.0",
+    "mocha": "^9.1.1",
+    "sinon": "^11.1.2",
     "spectron": "^13.0.0"
   },
   "dependencies": {
     "bignumber.js": "^9.0.1",
-    "chart.js": "^2.9.4",
+    "chart.js": "^3.5.1",
     "esprima": "^4.0.1",
     "nyc": "^15.1.0",
-    "prettier": "^2.2.1",
+    "prettier": "^2.4.0",
     "pretty-data": "^0.40.0",
-    "serialize-javascript": "^5.0.1"
+    "serialize-javascript": "^6.0.0",
+    "y18n": "^5.0.8"
   },
   "mocha": {
     "spec": [
