--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "EBTCalc",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Programmable RPN Calculator",
   "main": "src/main.js",
   "scripts": {
@@ -26,20 +26,20 @@
   "author": "eric@terrell.info",
   "license": "GPL-3.0-only",
   "devDependencies": {
-    "chai": "^4.3.4",
-    "electron": "^15.2.0",
+    "chai": "^4.3.6",
+    "electron": "^16.0.8",
     "electron-packager": "^15.4.0",
-    "mocha": "^9.1.3",
-    "sinon": "^11.1.2",
+    "mocha": "^9.2.0",
+    "sinon": "^13.0.0",
     "spectron": "^15.0.0"
   },
   "dependencies": {
-    "@electron/remote": "^2.0.1",
-    "bignumber.js": "^9.0.1",
-    "chart.js": "^3.5.1",
-    "esprima": "^4.0.1",
+    "@electron/remote": "^2.0.4",
+    "bignumber.js": "^9.0.2",
+    "chart.js": "^3.7.0",
+    "espree": "^9.3.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.4.1",
+    "prettier": "^2.5.1",
     "pretty-data": "^0.40.0",
     "serialize-javascript": "^6.0.0",
     "y18n": "^5.0.8"
