Added new Linux (AMD 64-bit) version

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "EBTCalc",
-  "version": "1.0.25",
+  "version": "1.0.26",
   "description": "Programmable RPN Calculator",
   "main": "src/main.js",
   "scripts": {
     "start": "electron .",
-    "build": "npm run build-windows && npm run build-linux",
+    "build": "npm run build-windows && npm run build-linux-intel-amd-64-bit && npm run build-linux-arm-64-bit",
     "build-windows": "electron-packager . --icon=resources/calc.ico --out ../EBTCalc-build --overwrite --platform=win32 --asar --extraResource=resources/calc.ico --extraResource=resources/question_mark.png --ignore=setup",
-    "build-linux": "electron-packager . --icon=resources/calc.png --extra-resource=resources/calc.png --out ../EBTCalc-build --overwrite --platform=linux --asar --extraResource=resources/question_mark.png --ignore=setup",
+    "build-linux-intel-amd-64-bit": "electron-packager . --icon=resources/calc.png --extra-resource=resources/calc.png --out ../EBTCalc-build --overwrite --platform=linux --asar --extraResource=resources/question_mark.png --ignore=setup",
+    "build-linux-arm-64-bit": "electron-packager . --icon=resources/calc.png --extra-resource=resources/calc.png --out ../EBTCalc-build --overwrite --platform=linux --arch=arm64 --asar --extraResource=resources/question_mark.png --ignore=setup",
     "test": "nyc mocha"
   },
   "config": {
